update fitur uploadimage