@@ -4,12 +4,15 @@ import com.zkos.helloworld.model.Role;
 import com.zkos.helloworld.model.User;
 import com.zkos.helloworld.service.RoleService;
 import com.zkos.helloworld.service.UserService;
+import org.zkoss.bind.BindUtils;
 import org.zkoss.bind.annotation.*;
 import org.zkoss.image.AImage;
-import org.zkoss.image.Image;
 import org.zkoss.util.media.Media;
 import org.zkoss.zk.ui.Executions;
+import org.zkoss.zk.ui.util.Clients;
 import org.zkoss.zkplus.spring.SpringUtil;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
 import java.io.ByteArrayOutputStream;
@@ -18,6 +21,7 @@ import java.io.InputStream;
 import java.util.*;
 
 public class UserManagementVM {
+
     private final UserService userService = (UserService) SpringUtil.getBean("userService");
     private final RoleService roleService = (RoleService) SpringUtil.getBean("roleService");
     private final BCryptPasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
@@ -29,7 +33,7 @@ public class UserManagementVM {
     private String nama;
     private String posisi;
     private String status;
-    private Image imageMedia;
+    private AImage imageMedia; // ✅ Ganti dari Image ke AImage
     private String fileLabel;
     private String password;
 
@@ -41,6 +45,7 @@ public class UserManagementVM {
     @Init
     public void init() {}
 
+    // Getter & Setter
     public List<User> getFilteredUsers() { return filteredUsers; }
     public String getNpk() { return npk; }
     public void setNpk(String npk) { this.npk = npk; }
@@ -50,8 +55,8 @@ public class UserManagementVM {
     public void setPosisi(String posisi) { this.posisi = posisi; }
     public String getStatus() { return status; }
     public void setStatus(String status) { this.status = status; }
-    public Image getImageMedia() { return imageMedia; }
-    public void setImageMedia(Image imageMedia) { this.imageMedia = imageMedia; }
+    public AImage getImageMedia() { return imageMedia; }
+    public void setImageMedia(AImage imageMedia) { this.imageMedia = imageMedia; }
     public String getFileLabel() { return fileLabel; }
     public void setFileLabel(String fileLabel) { this.fileLabel = fileLabel; }
     public boolean isEditMode() { return editMode; }
@@ -61,10 +66,8 @@ public class UserManagementVM {
     public void setSearchKeyword(String searchKeyword) { this.searchKeyword = searchKeyword; }
 
     public boolean isAdmin() {
-        org.springframework.security.core.Authentication auth =
-                org.springframework.security.core.context.SecurityContextHolder.getContext().getAuthentication();
-        return auth.getAuthorities().stream()
-                .anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        return auth.getAuthorities().stream().anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
     }
 
     public AImage userImageMedia(User user) {
@@ -82,22 +85,18 @@ public class UserManagementVM {
     @NotifyChange({"filteredUsers", "npk", "nama", "posisi", "status", "imageMedia", "fileLabel", "editMode", "password"})
     public void save() {
         if (!isAdmin()) {
-            org.zkoss.zk.ui.util.Clients.showNotification("Access denied.", "error", null, "top_center", 2000);
+            Clients.showNotification("Access denied.", "error", null, "top_center", 2000);
             return;
         }
-        if (npk == null || npk.trim().isEmpty() ||
-                nama == null || nama.trim().isEmpty() ||
-                posisi == null || posisi.trim().isEmpty() ||
-                status == null || status.trim().isEmpty() ||
-                (!editMode && (password == null || password.trim().isEmpty()))) {
-            org.zkoss.zk.ui.util.Clients.showNotification("All fields are required!", "warning", null, "top_center", 2000);
+
+        if (npk == null || nama == null || posisi == null || status == null || (!editMode && password == null)) {
+            Clients.showNotification("Semua field wajib diisi!", "warning", null, "top_center", 2000);
             return;
         }
 
         byte[] imgBytes = null;
         if (imageMedia != null) {
-            try (InputStream is = imageMedia.getStreamData();
-                 ByteArrayOutputStream buffer = new ByteArrayOutputStream()) {
+            try (InputStream is = imageMedia.getStreamData(); ByteArrayOutputStream buffer = new ByteArrayOutputStream()) {
                 byte[] data = new byte[16384];
                 int nRead;
                 while ((nRead = is.read(data, 0, data.length)) != -1) {
@@ -106,7 +105,7 @@ public class UserManagementVM {
                 buffer.flush();
                 imgBytes = buffer.toByteArray();
             } catch (IOException e) {
-                org.zkoss.zk.ui.util.Clients.showNotification("Failed to read image!", "error", null, "top_center", 2000);
+                Clients.showNotification("Gagal membaca gambar!", "error", null, "top_center", 2000);
                 return;
             }
         }
@@ -122,23 +121,24 @@ public class UserManagementVM {
                 user.setImageData(imgBytes);
                 userService.updateUser(user);
             }
-            editMode = false;
-            editId = null;
         } else {
             user = new User();
             user.setNpk(npk);
             user.setNamaKaryawan(nama);
             user.setPosisi(posisi);
             user.setStatus(status);
-            user.setImageData(imgBytes);
             user.setPassword(passwordEncoder.encode(password));
-            userService.addUser(user);
+            user.setImageData(imgBytes);
 
+            // Role default USER
             Role defaultRole = roleService.findByName("USER");
             if (defaultRole != null) {
-                user.getRoles().add(defaultRole);
-                userService.updateUser(user);
+                Set<Role> roles = new HashSet<>();
+                roles.add(defaultRole);
+                user.setRoles(roles);
             }
+
+            userService.addUser(user);
         }
 
         users = userService.getAllUsers();
@@ -150,9 +150,10 @@ public class UserManagementVM {
     @NotifyChange("*")
     public void edit(@BindingParam("user") User user, @BindingParam("index") int index) {
         if (!isAdmin()) {
-            org.zkoss.zk.ui.util.Clients.showNotification("Access denied.", "error", null, "top_center", 2000);
+            Clients.showNotification("Access denied.", "error", null, "top_center", 2000);
             return;
         }
+
         this.editMode = true;
         this.editId = user.getId();
         this.npk = user.getNpk();
@@ -168,9 +169,10 @@ public class UserManagementVM {
     @NotifyChange("*")
     public void delete(@BindingParam("index") int index) {
         if (!isAdmin()) {
-            org.zkoss.zk.ui.util.Clients.showNotification("Access denied.", "error", null, "top_center", 2000);
+            Clients.showNotification("Access denied.", "error", null, "top_center", 2000);
             return;
         }
+
         if (index >= 0 && index < filteredUsers.size()) {
             User userToDelete = filteredUsers.get(index);
             userService.softDeleteUser(userToDelete.getId());
@@ -182,9 +184,10 @@ public class UserManagementVM {
     @Command
     public void view(@BindingParam("user") User user) {
         if (user == null) {
-            org.zkoss.zk.ui.util.Clients.showNotification("User not found.", "error", null, "top_center", 2000);
+            Clients.showNotification("User tidak ditemukan.", "error", null, "top_center", 2000);
             return;
         }
+
         Executions.getCurrent().setAttribute("selectedUser", user);
         Executions.createComponents("/user_detail.zul", null, null);
     }
@@ -208,6 +211,32 @@ public class UserManagementVM {
         this.filteredUsers = new ArrayList<>(users);
     }
 
+    @GlobalCommand
+    @NotifyChange({"imageMedia", "fileLabel"})
+    public void uploadImage(@BindingParam("media") Media media) {
+        System.out.println("UPLOAD IMAGE CALLED!");
+        if (media == null) {
+            Clients.showNotification("Media null", "error", null, "top_center", 3000);
+            return;
+        }
+
+        if (!(media instanceof AImage)) {
+            Clients.showNotification("File bukan gambar (.png/.jpg)", "error", null, "top_center", 3000);
+            return;
+        }
+
+        try {
+            this.imageMedia = (AImage) media;
+            this.fileLabel = "Uploaded: " + media.getName() + " (" + (media.getByteData().length / 1024) + " KB)";
+            Clients.showNotification("Upload berhasil!", "info", null, "top_center", 1500);
+        } catch (Exception e) {
+            e.printStackTrace();
+            Clients.showNotification("Upload gagal: " + e.getMessage(), "error", null, "top_center", 3000);
+        }
+
+    }
+
+
     @Command
     @NotifyChange("filteredUsers")
     public void search() {
@@ -220,18 +249,7 @@ public class UserManagementVM {
                             u.getNamaKaryawan().toLowerCase().contains(keywordLower) ||
                             u.getPosisi().toLowerCase().contains(keywordLower) ||
                             u.getStatus().toLowerCase().contains(keywordLower)
-            ).collect(java.util.stream.Collectors.toList());
-        }
-    }
-
-    @Command
-    @NotifyChange("*")
-    public void uploadImage(@BindingParam("media") Media media) {
-        if (media instanceof org.zkoss.image.Image) {
-            this.imageMedia = (Image) media;
-            this.fileLabel = media.getName();
-        } else {
-            org.zkoss.zk.ui.util.Clients.showNotification("Please upload an image file.", "warning", null, "top_center", 2000);
+            ).toList();
         }
     }
 }
